--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -66,6 +66,9 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
+            docker-compose exec backend python manage.py makemigrations
+            docker-compose exec backend python manage.py migrate
+            docker-compose exec backend python manage.py collectstatic --no-input
 
   send_message_deploy:
     runs-on: ubuntu-latest
