--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,45 @@
 server {
     listen 80;
+    server_name 51.250.66.109;
+    return 301 https://$host$request_uri;
+    server_tokens off;
+}
+
+
+server {
+    listen 443 ssl;
+
+    server_name 51.250.66.109;
+    server_tokens off;
+
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /back_static/ {
+        root /var/html/;
+    }
+
+    location /back_media/ {
+        root /var/html/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header        Host      $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+        proxy_set_header        Host      $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
