--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.2'
 services:
 
   frontend:
-    image: rasul24/foodgram_frontend:v1.0
+    image: rasul24/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
 
@@ -29,7 +29,7 @@ services:
       - backend
 
   backend:
-    image: rasul24/foodgram_backend:v1.0
+    image: rasul24/foodgram_backend:latest
     restart: always
     volumes:
       - static_value:/app/back_static/
