--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,32 +1,12 @@
 version: '2.2'
 services:
 
-  frontend:
-    image: rasul24/frontend:latest
-    volumes:
-      - ../frontend/:/app/result_build/
-
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres:/var/lib/postgres/data/
     env_file:
       - ./.env
-
-  nginx:
-    image: nginx:1.19.3
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - docs:/usr/share/nginx/html/api/docs/
-      - ./ssl/:/etc/nginx/ssl/
-      - static_value:/var/html/back_static/
-      - media_value:/var/html/back_media/
-    depends_on:
-      - backend
 
   backend:
     image: rasul24/backend:latest
@@ -39,6 +19,28 @@ services:
       - db
     env_file:
       - ./.env
+
+  frontend:
+    image: rasul24/frontend:latest
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
+  nginx:
+    image: nginx:1.19.3
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
+      - docs:/usr/share/nginx/html/api/docs/
+      - ./ssl/:/etc/nginx/ssl/
+      - static_value:/var/html/back_static/
+      - media_value:/var/html/back_media/
+    depends_on:
+      - frontend
+    restart: always
 
 volumes:
   static_value:
