--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,14 +1,13 @@
 server {
     listen 80;
+
     server_name 51.250.66.109;
+    
     return 301 https://$host$request_uri;
-}
 
+    server_tokens off;
 
-server {
-    listen 443 ssl;
-
-    server_name 51.250.66.109;
+    client_max_body_size 20M;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
