--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,10 +1,7 @@
 server {
     listen 80;
-
     server_name 51.250.66.109;
-    
     return 301 https://$host$request_uri;
-
     server_tokens off;
 
     client_max_body_size 20M;
@@ -23,7 +20,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api;
         proxy_set_header        Host      $host;
         proxy_set_header        X-Real-IP $remote_addr;
     }
