--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name 51.250.66.109;
-    return 301 https://$host$request_uri;
+    # return 301 https://$host$request_uri;
     server_tokens off;
 
     client_max_body_size 20M;
